# catppuccinifier

./: .gitignore  INSTALL.md  LICENSE  README.md  UNINSTALL.md  flake.nix  install.sh  uninstall.sh  update.sh
desktop/: Catppuccinifier.desktop
src/: catppuccinifier
src/Linux/binaries-source/catppuccinifier-cli/: Cargo.toml
src/Linux/binaries-source/catppuccinifier-cli/src/: main.rs
src/Linux/binaries-source/catppuccinifier-gui/src/: css.rs  items.rs  main.rs
src/Linux/binaries-source/install-cli/src/: main.rs
src/Linux/binaries-source/manage-cli/: Cargo.toml
src/Linux/binaries-source/manage-cli/src/: main.rs
src/Linux/installation-files/: Catppuccinifier.desktop
src/Windows/binaries-source/catppuccinifier-cli/: Cargo.toml
src/Windows/binaries-source/catppuccinifier-cli/src/: main.rs
src/Windows/binaries-source/catppuccinifier-gui/: App.xaml  App.xaml.cs  Cargo.toml  Catppuccinifier.sln  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  PreviewWindow.xaml  PreviewWindow.xaml.cs  app.manifest  build.rs  catppuccinifier.csproj  catppuccinifier_TemporaryKey.pfx
src/Windows/binaries-source/catppuccinifier-gui/Catppuccinifier/: Catppuccinifier.csproj  MainForm.Designer.cs  MainForm.cs  MainForm.resx  PreviewImageForm.Designer.cs  PreviewImageForm.cs  Program.cs
src/Windows/binaries-source/catppuccinifier-gui/Catppuccinifier/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/Windows/binaries-source/catppuccinifier-gui/Properties/: launchSettings.json
src/Windows/binaries-source/catppuccinifier-gui/src/: app.rs  lib.rs  main.rs
src/Windows/binaries-source/install-cli/: Cargo.toml
src/Windows/binaries-source/install-cli/src/: main.rs
src/Windows/binaries-source/installer/: Cargo.toml
src/Windows/binaries-source/installer/src/: copy-files.ps1  create-folder.ps1  main.rs
src/Windows/binaries-source/uninstall-cli/src/: remove-folders.ps1
src/Windows/installation-files/: Catppuccinifier.lnk
src/Windows/installation-files/catppuccinifier-gui/: catppuccinifier.deps.json  catppuccinifier.runtimeconfig.json  resources.pri
src/Windows/installation-files/catppuccinifier-gui/en-us/: Microsoft.UI.Xaml.Phone.dll.mui
src/assets/: Catppuccinifier.desktop
src/catppuccinifier-cli/: Cargo.toml
src/catppuccinifier-cli/src/: main.rs
src/catppuccinifier-cli/src/cli/: mod.rs
src/catppuccinifier-gui/: Cargo.toml  grep  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
src/catppuccinifier-gui/src/: App.jsx  App.vue  Constants.ts  Main.vue  Root.vue  app.css  app.d.ts  data.ts  main.rs  main.ts  settings.ts
src/catppuccinifier-gui/src-tauri/: Cargo.toml  tauri.conf.json
src/catppuccinifier-gui/src-tauri/capabilities/: default.json
src/catppuccinifier-gui/src-tauri/icons/: icon.icns
src/catppuccinifier-gui/src-tauri/src/: lib.rs  main.rs  view_models.rs
src/catppuccinifier-gui/src-tauri/src/settings/: mod.rs
src/catppuccinifier-gui/src-tauri/src/structs/: mod.rs
src/catppuccinifier-gui/src-tauri/src/view_models/: main_vm.rs  settings_vm.rs
src/catppuccinifier-gui/src/components/: FlavorToggleButton.vue  GenerateImageSection.vue  GeneratedImageBox.vue  GeneratedImagesSection.vue  PrimaryButton.vue  RadioButton.vue  Slider.vue  Toggle.vue
src/catppuccinifier-gui/src/lib/components/: RangeSlider.svelte
src/catppuccinifier-gui/src/lib/models/: Settings.ts
src/catppuccinifier-gui/src/lib/repositories/: settings-repository.ts
src/catppuccinifier-gui/src/pages/: Preview.vue  Settings.vue
src/catppuccinifier-gui/src/routes/: +layout.svelte  +page.svelte  main-repository.ts
src/catppuccinifier-gui/src/routes/components/: Navbar.svelte
src/catppuccinifier-gui/src/routes/pages/generate/: GeneratePage.svelte  generate-page-vm.ts
src/catppuccinifier-gui/src/routes/pages/properties/: PropertiesPage.svelte  properties-page-vm.ts
src/catppuccinifier-gui/src/routes/pages/settings/: SettingsPage.svelte  settings-page-vm.ts
src/catppuccinifier-gui/src/routes/preview/[file]/: +page.svelte
src/flavors/: make-luts.sh
src/install-cli/src/: main.rs
src/install-cli/src/windows/: copy-files.ps1  set-path.ps1
src/manage-cli/src/: main.rs
src/releases/windows/installation-files/: Catppuccinifier.lnk
src/source-code/catppuccinifier-cli/: Cargo.toml
src/source-code/catppuccinifier-cli/src/: main.rs
src/source-code/catppuccinifier-gui/: index.html  package-lock.json  package.json  preview.html  tailwind.config.js  vite.config.js  vite.config.ts
src/source-code/catppuccinifier-gui/src/: App.css  App.jsx  App.vue  AppVM.js  Constants.js  app.css  main.ts  preview.jsx
src/source-code/catppuccinifier-gui/src-tauri/: Cargo.toml
src/source-code/catppuccinifier-gui/src-tauri/icons/: icon.icns
src/source-code/catppuccinifier-gui/src-tauri/src/: main.rs
src/source-code/catppuccinifier-gui/src/components/: GeneratedImageBox.jsx
src/source-code/catppuccinifier-gui/src/pages/Preview/: PreviewPage.jsx
src/source-code/install-cli/: Cargo.toml
src/source-code/install-cli/src/: main.rs
src/source-code/linux-catppuccinifier-cli/: Cargo.toml
src/source-code/linux-install-cli/: Cargo.toml
src/source-code/linux-uninstall-cli/: Cargo.toml
src/source-code/linux-uninstall-cli/src/: main.rs
src/source-code/uninstall-cli/: Cargo.toml
src/source-code/uninstall-cli/src/: main.rs
src/source-code/uninstall-cli/src/windows/: remove-folders.ps1
src/source-code/windows-catppuccinifier-cli/: Cargo.toml
src/source-code/windows-catppuccinifier-cli/src/: main.rs
src/source-code/windows-install-cli/src/: copy-files.ps1  main.rs
src/source-code/windows-uninstall-cli/: Cargo.toml
src/source-code/windows-uninstall-cli/src/: main.rs
src/uninstall-cli/: Cargo.toml
src/uninstall-cli/src/: main.rs
