[package]
name = "catppuccinifier-cli"
version = "7.0.0"
edition = "2021"
description = "A cli tool to catppuccinify your wallpapers"

[dependencies]
colored = "2.0.0"
dirs = "5.0.0"
clap = { version = "4.2.7", features = ["derive", "cargo"] }
substring = "1.4.5"
catppuccinifier-rs ={ git = "https://github.com/lighttigerXIV/catppuccinifier-rs"}
