[package]
name = "catppuccinifier"
version = "0.1.0"
authors = ["Isabel Roses <isabel@isabelroses.com>"]
edition = "2021"
rust-version = "1.65"


[dependencies]
egui = "0.21.0"
catppuccin-egui = "2.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
rfd = "0.11"
threads = "0.1.0"
# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"