[package]
name = "catppuccinifier-gui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog-open", "dialog-save", "fs-all", "path-all", "protocol-asset", "shell-open", "window-create"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
lutgen = "0.5.0"
exoquant = "0.2.0"
image = "0.24.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
